/*
 * @author Yanzhe Lee [lee.yanzhe@yanzhe.org]
 */
syntax = "proto3";
package com.hitnslab.dnssecurity.deeparcher.api.proto;
option java_package = "com.hitnslab.dnssecurity.deeparcher.api.proto.generated.java";
option java_outer_classname = "DomainDnsDetailProto";
option optimize_for = SPEED;
option cc_enable_arenas = true;

message DomainDnsDetail {

  /* Fully Qualified Domain Name (FQDN).
   * Should be of [RFC4703](https://tools.ietf.org/html/rfc4703) format.
   * NOT NULL. */
  string fqdn = 1;

  /* Top private domain.
   * Should be of [RFC4703](https://tools.ietf.org/html/rfc4703) format.
   * @see [InternetDomainNameExplained](https://github.com/google/guava/wiki/InternetDomainNameExplained)
   * NOT NULL. */
  string domain = 2;

  /* IPv4 addresses.
   * IP addresses are represented by concatenated big endian bytes.
   * The length of this field should be multiple of 4.
   * NULLABLE. */
  bytes ipv4_addrs = 7;

  /* IPv6 addresses.
   * IP addresses are represented by concatenated big endian bytes.
   * The length of this field should be multiple of 16.
   * NULLABLE. */
  bytes ipv6_addrs = 8;

  /* CNAMEs.
   * NULLABLE. */
  repeated string cnames = 9;
}
